--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ header {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Roboto-Bold', 'Helvetica Neue', 'sans-serif';
 }
 
 
