--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ header {
 }
 
 body {
-    font-family: 'Roboto', 'Roboto-Bold', 'Helvetica Neue', 'sans-serif';
+    font-family: "Roboto", "Roboto-Bold", 'Helvetica Neue', 'sans-serif';
 }
 
 
@@ -40,4 +40,48 @@ body {
     margin-top: 50px;
     padding-top: 30vh;
     font-size: 1.5rem;
+  }
+
+
+
+
+
+  li:before {
+    content: "\200B";
+    position: absolute;
+  }
+  
+  li::after {
+    content: " ";
+    display: block;
+    clear: both;
+  }
+  
+  li button {
+    float: right;
+    border: none;
+    height: 4vh;
+    cursor: pointer;
+    background: #2c3e50;
+    color: white;
+    font-size: 1em;
+    border-radius: 7px;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+    background-color: white;
+  }
+  
+  li {
+    height: 5vh;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    color: white;
+    font-size: 1.2em;
+    line-height: 1.5;
+    background-color: #0e6fb4c2;
+    border-radius: 5px;
   }
